<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragment.WorkOutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Camera Preview -->
        <androidx.camera.view.PreviewView
            android:id="@+id/preview_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <!-- Graphic Overlay for Pose Detection -->
        <com.example.afit_gr1.views.graphic.GraphicOverlay
            android:id="@+id/graphic_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@id/preview_view"
            app:layout_constraintLeft_toLeftOf="@id/preview_view"
            app:layout_constraintRight_toRightOf="@id/preview_view"
            app:layout_constraintTop_toTopOf="@id/preview_view" />

        <!-- Confidence Indicator -->
        <ImageView
            android:id="@+id/confidenceIndicatorView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.7"
            android:layout_margin="10dp"
            android:visibility="invisible"
            android:contentDescription="@string/confidence_indicator"
            android:background="@drawable/confidence_indicator"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>



        <TextView
            android:id="@+id/confidenceIndicatorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="100sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/confidenceIndicatorView"
            app:layout_constraintStart_toStartOf="@+id/confidenceIndicatorView"
            app:layout_constraintBottom_toBottomOf="@+id/confidenceIndicatorView"
            app:layout_constraintTop_toTopOf="@+id/confidenceIndicatorView"/>

        <TextView
            android:id="@+id/completedAllExerciseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="20dp"
            android:textAlignment="center"
            android:visibility="gone"
            android:layout_marginBottom="30dp"
            android:text="@string/completedAll"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/workoutRecycleViewArea"/>

        <!-- Cancel Exercise Button -->
        <Button
            android:id="@+id/button_cancel_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:visibility="invisible"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorButtonDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.87"
            app:pressedTranslationZ="6dp"
            app:tint="@color/white" />

        <!-- Start Exercise Button -->
        <Button
            android:id="@+id/button_start_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_button"
            android:textColor="@color/colorStravaOrange"
            app:backgroundTint="@color/colorButtonDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.87"
            app:pressedTranslationZ="6dp"
            app:tint="@color/white" />

        <!-- Complete Exercise Button -->
        <Button
            android:id="@+id/button_complete_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_button"
            android:textColor="@color/colorStravaOrange"
            android:visibility="invisible"
            app:backgroundTint="@color/colorButtonDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.87"
            app:pressedTranslationZ="6dp"
            app:tint="@color/white" />

        <!-- RecyclerView for Workout Exercise List -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/workoutRecycleViewArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/exerciselist_background"
            android:paddingHorizontal="15dp"
            android:layout_marginEnd="20dp"
            android:paddingVertical="5dp"
            app:layout_constraintBottom_toTopOf="@+id/facing_switch"
            app:layout_constraintEnd_toEndOf="@+id/preview_view"
            app:layout_constraintTop_toBottomOf="@+id/currentRepetitionText" />

        <!-- Camera Facing Switch Button -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/facing_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:importantForAccessibility="no"
            app:backgroundTint="@color/colorButtonDark"
            app:elevation="15dp"
            app:fabCustomSize="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.92"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.87"
            app:pressedTranslationZ="6dp"
            app:rippleColor="@color/white"
            app:srcCompat="@drawable/cameraflip" />

        <!-- Timer Recording Icon -->
        <ImageView
            android:id="@+id/timerRecIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:src="@drawable/camera_rec_red_point"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/timerTV"
            app:layout_constraintEnd_toStartOf="@+id/timerTV"
            app:layout_constraintTop_toTopOf="@+id/timerTV"
            android:contentDescription="@string/record_icon" />

        <!-- Timer TextView -->
        <TextView
            android:id="@+id/timerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <!-- Current Exercise Text -->
        <TextView
            android:id="@+id/currentExerciseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_count"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <!-- Current Repetition Text -->
        <TextView
            android:id="@+id/currentRepetitionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_count"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />


        <!-- Yoga Pose -->
        <ImageView
            android:id="@+id/yogaPoseSnapShot"
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/confidence_indicator"
            android:src="@drawable/warrior_yoga_pose"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.02" />


        <!-- Loading Status TextView -->
        <TextView
            android:id="@+id/loadingStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/exerciselist_background"
            android:paddingHorizontal="50dp"
            android:paddingVertical="100dp"
            android:text="@string/loading"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/button_start_exercise"
            app:layout_constraintEnd_toEndOf="@+id/preview_view"
            app:layout_constraintStart_toStartOf="@+id/preview_view"
            app:layout_constraintTop_toBottomOf="@+id/timerTV" />


        <!-- Loading Progress Bar -->
        <ProgressBar
            android:id="@+id/loadingProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/primaryColor"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/loadingStatus"
            app:layout_constraintTop_toBottomOf="@+id/loadingStatus" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- FrameLayout for black background behind ViewPager -->
    <FrameLayout
        android:id="@+id/gifContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:visibility="gone">

        <!-- ViewPager for GIFs -->
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/exerciseViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <!-- GifImageView for displaying exercise GIFs -->
        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/exerciseGifImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"/>

        <!-- Skip button -->
        <Button
            android:id="@+id/skipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </FrameLayout>


</FrameLayout>