<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/workoutFragment"
        android:icon="@drawable/workout"
        android:title="@string/workout" />
    <item
        android:id="@+id/planStepOneFragment"
        android:icon="@drawable/plan"
        android:title="@string/plan" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile"
        android:title="@string/profile" />
</menu>
