...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Start your streak by logging an activity."
            android:textColor="@color/colorTextDarkSecondary"
            android:fontFamily="@font/outfit"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_record_now"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/training_title"
            android:layout_marginEnd="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_record_now"
...
