...

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Button to Go to Home -->
                <Button
                    android:id="@+id/goToHomeFromComplete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorButtonDark"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/home_button"
                    android:textColor="@color/white"
...
